fix: change img path

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <section class="backstage" id="backstage">
                 <div>
-                    <img src="img/bamboo-cap.png" alt="bamboo-cap" class="backstage_img">
+                    <img src="assets/img/bamboo-cap.png" alt="bamboo-cap" class="backstage_img">
                 </div>
                 <div class = backstage_text>
                     <h2>The Backstage of the Wilderness World.</h2>
@@ -56,13 +56,13 @@
                 </div>
             </section>
             <picture class="backstage_flower">
-                <img src="img/flower_foto1.png" alt="flower">
+                <img src="assets/img/flower_foto1.png" alt="flower">
             </picture>
 
             <section class="pets" id="pets">
                 <div class = pets_photos>
                     <figure class="pandas">
-                        <div class = "panda_photo"><img src="img/panda.png" alt="panda" class="pets_img"></div>
+                        <div class = "panda_photo"><img src="assets/img/panda.png" alt="panda" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "Giant Pandas"
@@ -72,7 +72,7 @@
                         </div>
                     </figure>
                     <figure class="eagles">
-                        <div class = "eagles_photo"><img src="img/eagle.png" alt="eagles" class="pets_img"></div>
+                        <div class = "eagles_photo"><img src="assets/img/eagle.png" alt="eagles" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "Eagles"
@@ -82,7 +82,7 @@
                         </div>
                     </figure>
                     <figure class="gorillas">
-                        <div class = "gorilla_photo"><img src="img/gorilla.png" alt="gorilla" class="pets_img"></div>
+                        <div class = "gorilla_photo"><img src="assets/img/gorilla.png" alt="gorilla" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "gorillas"
@@ -92,7 +92,7 @@
                         </div>
                     </figure>
                     <figure class="koala">
-                        <div class = "koala_photo"><img src="img/koala.png" alt="koala" class="pets_img"></div>
+                        <div class = "koala_photo"><img src="assets/img/koala.png" alt="koala" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "Two-toed sloth"
@@ -102,7 +102,7 @@
                         </div>
                     </figure>
                     <figure class="cheetah">
-                        <div class = "cheetah_photo"><img src="img/cheetah.png" alt="cheetah" class="pets_img"></div>
+                        <div class = "cheetah_photo"><img src="assets/img/cheetah.png" alt="cheetah" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "Cheetahs"
@@ -112,7 +112,7 @@
                         </div>
                     </figure>
                     <figure class="penguin">
-                        <div class = "penguin_photo"><img src="img/penguin.png" alt="" class="pets_img"></div>
+                        <div class = "penguin_photo"><img src="assets/img/penguin.png" alt="" class="pets_img"></div>
                         <div>
                             <figcaption class = "pets_text">
                                 "Penguins"
@@ -125,10 +125,10 @@
                 <button class="pets_button btn">choose your favorite</button>
             </section>
             <picture class="pets_flower1">
-                <img src="img/palm_foto.png" alt="flower">
+                <img src="assets/img/palm_foto.png" alt="flower">
             </picture>
             <picture class="pets_flower2">
-                <img src="img/strelitzia 1.png" alt="flower">
+                <img src="assets/img/strelitzia 1.png" alt="flower">
             </picture>
 
             <section class="feed" id="feed">
@@ -236,7 +236,7 @@
                 <button class="feedback_button btn">Leave feedback</button>
             </section>
             <picture class="feedback_flower">
-                <img src="img/leav_foto.png" alt="flower">
+                <img src="assets/img/leav_foto.png" alt="flower">
             </picture>
         </div>
     </main>
